tests/paczka1/fuzzy1/50211974.err
Error in line 4: 3PR8YWkrJYi S982 62,5
Error in line 6: iUW S765 9,22
Error in line 13: jT21XfNFiyq S982 72,9
Error in line 18: jT21XfNFiyq A145 77,6
Error in line 21: bQvcnFR A663 33,0
Error in line 14: 3PR8YWkrJYi A663 343,2
Error in line 27: jT21XfNFiyq A663 76,4
Error in line 24: 2dY3Vf2pv04 S982 56,0
